fix wonky spacing of columns from prev commits. disable button to add xform and contrasts until predictors selected, name given etc.

--- a/neuroscout/frontend/src/App.css
+++ b/neuroscout/frontend/src/App.css
@@ -29,6 +29,10 @@
   float: right;
 }
 
+.homeBtn {
+    justify-content: center;
+}
+
 .nextButton {
   float: right;
 }
